Adding DepartmentForeingKey migration

--- a/Views/Sellers/Index.cshtml
+++ b/Views/Sellers/Index.cshtml
@@ -6,6 +6,8 @@
 
 <h1>@ViewData["Title"]</h1>
 
+<a asp-action="Create" class="btn btn-default">Create new</a>
+
 <table class="table table-stripped table-hover">
     <thead>
         <tr class="sucess">
